--- a/PieShop.csproj
+++ b/PieShop.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Models\Pie.cs" />
+  </ItemGroup>
+
 </Project>
