--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "PieShopDbContextConnection": "Server=DESKTOP-GMFBG71;Database=PieShop;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
